--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
-    "start": "cross-env NODE_ENV=production ts-node src/index.ts"
+    "start": "cross-env NODE_ENV=production node dist/",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
